Bug 417562 - 'protect against Obj-C exceptions in "modules" top-level directory'. r=josh, sr=roc, a=blocking1.9+.